--- a/publications/index.html
+++ b/publications/index.html
@@ -115,7 +115,7 @@ img {
 <em>L. Tiwari</em>, Doctoral Symposium at ICVGIP 2016, IIT-Guwahati, India. <br />
 [<a href="">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] <br /><br />
 
-<strong>Geometric Model Fiting Game</strong>
+<strong>Geometric Model Fitting Game</strong>
 <br /><em>L. Tiwari</em> and S. Anand. Symposium on Optimization, 2016, IIT-Kanpur, India. <br />
 [<a href="">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>]
 </div>
