--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Recently, I focus on the following research topics:
 <li>IEEE Signal Processing Society, Travel Award to attend <a href= "http://www.2016.ieeeicip.org/ICIP%202016/www2.securecms.com/ICIP2016/default.html" target="_blank">IEEE ICIP 2016</a> </li>
 <li><a href="https://phd.dic.gov.in/" target="_blank">Visvesvarya Ph.D. Fellowship</a> award, Jul 2014- Dec 2019</li>
 <li>MHRD Graduate Fellowship, GATE (Top 4% in India), Jul 2012- Jun 2014</li>
-<li>University Topper and <a href="https://tiwarilokender.github.io/gold.html" target="_blank">Chancellor's Gold Medal</a> for academic excellence in undergraduate B.Tech CSE., Jul 2012- Jun 2014</li>
+<li>University Topper and <a href="https://lokender.github.io/gold.html" target="_blank">Chancellor's Gold Medal</a> for academic excellence in undergraduate B.Tech CSE., Jul 2012- Jun 2014</li>
 
 </ul>
 </font>
