--- a/gold.html
+++ b/gold.html
@@ -49,7 +49,7 @@ Email: lokendert@iiitd.ac.in<br />
 
 <!-- deblur-->
 <tr style="text-align:right">
-<td> <img src="/mnt/misc/all_websites/tiwarilokender.github.io/files/gold.jpg"  width="625" height="350" style="border: 0; border-radius: 4px; float:left;margin-left:0px; margin-right:8px; margin-bottom:3px; margin-top:1px; position:relative; top:2px;">
+<td> <img src="./files/gold.jpg"  width="625" height="350" style="border: 0; border-radius: 4px; float:left;margin-left:0px; margin-right:8px; margin-bottom:3px; margin-top:1px; position:relative; top:2px;">
 </td>
 </tr> <br>
 <tr>
