img size reduced

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ arXiv, 2020.<br>
 <li><a href= "http://www.nec-labs.com/~manu/" target="_blank">Prof. Manmohan Chandraker</a>, Head, Media Analytics Department of <a href="http://www.nec-labs.com/research-departments/media-analytics/media-analytics-home" target="_blank">NEC Labs.</a> and  <a href= "https://cseweb.ucsd.edu/~mkchandraker/" target="_blank">Prof. at UC San Diego</a> <br></li>
 <li><a href= "https://cs.adelaide.edu.au/~huy/home.php" target="_blank">Dr. Quoc-Huy Tran</a>, CTO at <a href= "http://retrocausal.ai/" target="_blank">Retrocausal, Inc.</a> <br></li>
 <li><a href= "http://www.nec-labs.com/pan-ji" target="_blank">Dr. Pan Ji</a>, Researcher at <a href="http://www.nec-labs.com/research-departments/media-analytics/media-analytics-home" target="_blank">NEC Labs.</a><br></li>
-<li><a href= "http://www.nec-labs.com/bingbing-zhuang" target="_blank">Dr. Bingbing Zhauang</a>, Postdoctoral Scientist  at <a href="http://www.nec-labs.com/research-departments/media-analytics/media-analytics-home" target="_blank">NEC Labs.</a></li>
+<li><a href= "http://www.nec-labs.com/bingbing-zhuang" target="_blank">Dr. Bingbing Zhuang</a>, Postdoctoral Scientist  at <a href="http://www.nec-labs.com/research-departments/media-analytics/media-analytics-home" target="_blank">NEC Labs.</a></li>
 </ul>
 
 
