--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ I am interested in developing robust methods for <i>low-level geometric scene un
 Recently, I focus on the following research topics:
 <ul>	
 <li>Self-Improving SLAM and Depth Prediction</li>
-<li>Robust Image Classification</li>
+<li>Robust Deep Learning/Machine Learning</li>
 <li>Robust Statistical Methods for Robust Multiple Geometric Model Fitting</li>
 <li>3D Vision for AR</li>
 </ul>
