--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Recently, I focus on the following research topics:
 <ul>	
 <li>Self-Improving SLAM and Depth Prediction</li>
 <li>Robust Deep Learning/Machine Learning</li>
-<li>Robust Statistical Methods for Robust Multiple Geometric Model Fitting</li>
+<li>Robust Statistical Methods for Multiple Structure Recovery</li>
 <li>3D Vision for AR</li>
 </ul>
 
