--- a/bibtex.html
+++ b/bibtex.html
@@ -19,6 +19,28 @@ html,body{margin:0;padding:0}
 <body>
 
 
+<a id="tiwari2020dgsac" name="tiwari2020dgsac">
+@article{tiwari2020dgsac, </br>
+   title={DGSAC: Density Guided Sampling and Consensus},</br>
+  author={Tiwari, Lokender and Anand, Saket},</br>
+  journal={arXiv preprint arXiv:2006.02413},</br>
+  year={2020}</br>
+}</br>
+}</br>
+</a>
+
+
+<a id="tiwari2020dissecting" name="tiwari2020dissecting">
+@article{tiwari2020dissecting, </br>
+  title={Dissecting Deep Networks into an Ensemble of Generative Classifiers for Robust Predictions},</br>
+   author={Tiwari, Lokender and Madan, Anish and Anand, Saket and Banerjee, Subhashis },</br>
+  journal={arXiv preprint arXiv:2006.10679},</br>
+  year={2020}</br>
+}</br>
+}</br>
+</a>
+
+
 <a id="tiwari2020pseudo" name="tiwari2020pseudo">
 @article{tiwari2020pseudo, </br>
   title={Pseudo RGB-D for Self-Improving Monocular SLAM and Depth Prediction},</br>
