--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ Email: lokendert@iiitd.ac.in<br />
 I am interested in developing robust methods for <i>low-level geometric scene understanding</i> (e.g SfM/SLAM, multiple-geometric model fitting, image-based 3D modeling) and <i>high-level semantic understanding</i> (e.g image classification, object detection, segmentation). In general, for robust scene understanding, I am interested in developing methods that can handle <i>noise</i>, <i>outliers</i>, and <i>adversarial perturbations</i>. 
 Recently, I focus on the following research topics:
 <ul>	
-<li>Self-Improving SLAM and Depth Prediction</li>
-<li>Robust Deep Learning/Machine Learning</li>
+<li>SLAM, Depth Prediction, Semantic Segmentation, Motion Deblurring</li>
+<li>Understanding Deep Learning/Machine Learning from Information Theory and Robust Statistics Lens</li>
 <li>Robust Statistical Methods for Multiple Structure Recovery</li>
 <li>3D Vision for AR</li>
 </ul>
@@ -60,6 +60,11 @@ Recently, I focus on the following research topics:
 
 <h2>News</h2>
 <ul>
+
+<li>[<b>June/2020</b>] *REGroup*. A test time replacement of Softmax to convert a pre-trained classifier into robust classifier is released. <a href="https://arxiv.org/pdf/2006.10679.pdf" target="_blank">arXiv</a>, <a href="https://github.com/lokender/REGroup" target="_blank">Code</a>.</li>
+<li>[<b>June/2020</b>] I will be a volunteer for <a href="https://icml.cc/" target="_blank">ICML 2020</a></li>
+<li>[<b>May/2020</b>] Journal version of DGSAC, with automated multi-structure hypothesis sampling algorithm is j. <a href="https://arxiv.org/pdf/2006.02413.pdf" target="_blank">arXiv</a>.</li>
+
 <li>[<b>Apr/2020</b>] Pseudo-RGBD SLAM paper released on <a href="https://arxiv.org/abs/2004.10681" target="_blank">arXiv</a>, <a href="https://www.youtube.com/playlist?list=PL-cvWulnEGU6gBmgr8leVbJ6k7aI3MTjA" target="_blank">Demo</a>.</li>
 <li>[<b>Apr/2020</b>] I will be a volunteer for <a href="https://iclr.cc/" target="_blank">ICLR 2020</a></li>
 <li>[<b>Feb/2019</b>] I will be spending summer 2019 at Media Analytics Department of <a href="http://www.nec-labs.com/research-departments/media-analytics/media-analytics-home" target="_blank">NEC Laboratories America, Inc.</a></li>
@@ -136,14 +141,33 @@ Recently, I focus on the following research topics:
 <h2>Publications</h2>
 
 <table class="imgtable">
-<!-- deblur-->
+<!-- REGroup-->
 <tr>
-<td><img class="proj_thumb" src="./papers_imgs/adv_example.png" alt="" height="100px"/>&nbsp;</td>
+<td><img class="proj_thumb" src="./papers_imgs/REGroup.png" alt="" height="100px",/>&nbsp;</td>
 <td>
-<p class="pub_title">Robust Image Classification</p>
-<p> coming soon ...
+<p class="pub_title">Dissecting Deep Networks into an Ensemble of Generative Classifiers for Robust Predictions</p>
+<p class="pub_author"><b>Lokender Tiwari</b>, Anish Madan, Saket Anand, Subhashish Banerjee<br>
+arXiv, 2020.<br>
+[<a href= "https://arxiv.org/pdf/2004.10681.pdf" target="_blank">Preprint</a>] 
+[<a href="https://github.com/lokender/REGroup" target="_blank">Code</a>] 
+[<a href="bibtex.html#tiwari2020dissecting" target="_blank">BibTex</a>]
 </p> </td>
 </tr>
+
+<!-- REGroup-->
+<tr>
+<td><img class="proj_thumb" src="./papers_imgs/intro_dgsac.png" alt="" height="100px",/>&nbsp;</td>
+<td>
+<p class="pub_title">DGSAC: Density Guided Sampling and Consensus (Journal version: with new fully automated multi model hypothesis sampling algorithm and Quadratic program based model selection.)</p>
+<p class="pub_author"><b>Lokender Tiwari</b>, Saket Anand<br>
+arXiv, 2020.<br>
+[<a href= "https://arxiv.org/pdf/2004.10681.pdf" target="_blank">Preprint</a>] 
+[<a href="" target="_blank">Code coming soon</a>] 
+[<a href="bibtex.html#tiwari2020dgsac" target="_blank">BibTex</a>]
+</p> </td>
+</tr>
+
+
 
 <!-- prgbd-->
 <tr>
