--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@ Recently, I focus on the following research topics:
 <h2>News</h2>
 <ul>
 
-<li>[<b>June/2020</b>] *REGroup*. A test time replacement of Softmax to convert a pre-trained classifier into robust classifier is released. <a href="https://arxiv.org/pdf/2006.10679.pdf" target="_blank">arXiv</a>, <a href="https://github.com/lokender/REGroup" target="_blank">Code</a>.</li>
+<li>[<b>June/2020</b>] *REGroup*. A test time replacement of Softmax to convert a pre-trained classifier into a robust classifier is released. <a href="https://arxiv.org/pdf/2006.10679.pdf" target="_blank">arXiv</a>, <a href="https://github.com/lokender/REGroup" target="_blank">Code</a>.</li>
 <li>[<b>June/2020</b>] I will be a volunteer for <a href="https://icml.cc/" target="_blank">ICML 2020</a></li>
-<li>[<b>May/2020</b>] Journal version of DGSAC, with automated multi-structure hypothesis sampling algorithm is j. <a href="https://arxiv.org/pdf/2006.02413.pdf" target="_blank">arXiv</a>.</li>
+<li>[<b>May/2020</b>] Journal version of DGSAC, with automated multi-structure hypothesis sampling algorithm is released. <a href="https://arxiv.org/pdf/2006.02413.pdf" target="_blank">arXiv</a>.</li>
 
 <li>[<b>Apr/2020</b>] Pseudo-RGBD SLAM paper released on <a href="https://arxiv.org/abs/2004.10681" target="_blank">arXiv</a>, <a href="https://www.youtube.com/playlist?list=PL-cvWulnEGU6gBmgr8leVbJ6k7aI3MTjA" target="_blank">Demo</a>.</li>
 <li>[<b>Apr/2020</b>] I will be a volunteer for <a href="https://iclr.cc/" target="_blank">ICLR 2020</a></li>
