--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ arXiv, 2020.<br>
 <td>
 <p class="pub_title">Robust Estimation in Geometric Computer Vision</p>
 <p class="pub_author">Lokender Tiwari<br>
-<a href= "https://www.iitg.ac.in/icvgip2016/BestPaperAwards.php" target="_blank">Doctoral Symposium</a><br>
+<a href= "https://www.iitg.ac.in/icvgip2016/BestPaperAwards.php" target="_blank">Doctoral Symposium (Best Doctoral Consortium Award (3rd))</a><br>
 <i>Indian Conference on Computer Vision, Graphics and Image Processing</i> (<b>ICVGIP</b>), 2020.<br>
 </p> </td>
 </tr>
