--- a/index.html
+++ b/index.html
@@ -283,11 +283,13 @@ arXiv, 2020.<br>
 <a id="services" class="anchor"></a>
 <h2>Services</h2>
  
-<p>Reviewer:  </p>
+<p>Professional Services:  </p>
 <font size="3"> 
 <ul>
-<li>Pattern Recognition (PR)</li>
-<li>IEEE Winter Conference on Computer Vision (WACV)</li>
+<li>[Reviewer] Elsevier Pattern Recognition</li>
+<li>[Reviewer] IEEE Transactions on Industrial Electronics</li>
+<li>[Reviewer] IEEE Access</li>
+<li>[Reviewer] IEEE Winter Conference on Computer Vision (WACV)</li>
 </ul>
 </font>
 
