--- a/index.html
+++ b/index.html
@@ -60,12 +60,10 @@ Recently, I focus on the following research topics:
 
 <h2>News</h2>
 <ul>
-
+<li>[<b>July/2020</b>] Our work on self-improving SLAM and Depth Predictions accepted to <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a>. Check <a href= "https://arxiv.org/pdf/2004.10681.pdf" target="_blank">Preprint</a> and <a href="https://www.youtube.com/playlist?list=PL-cvWulnEGU6gBmgr8leVbJ6k7aI3MTjA" target="_blank">Demo</a> .</li>
 <li>[<b>June/2020</b>] *REGroup*. A test time replacement of Softmax to convert a pre-trained classifier into a robust classifier is released. <a href="https://arxiv.org/pdf/2006.10679.pdf" target="_blank">arXiv</a>, <a href="https://github.com/lokender/REGroup" target="_blank">Code</a>.</li>
 <li>[<b>June/2020</b>] I will be a volunteer for <a href="https://icml.cc/" target="_blank">ICML 2020</a></li>
 <li>[<b>May/2020</b>] Journal version of DGSAC, with automated multi-structure hypothesis sampling algorithm is released. <a href="https://arxiv.org/pdf/2006.02413.pdf" target="_blank">arXiv</a>.</li>
-
-<li>[<b>Apr/2020</b>] Pseudo-RGBD SLAM paper released on <a href="https://arxiv.org/abs/2004.10681" target="_blank">arXiv</a>, <a href="https://www.youtube.com/playlist?list=PL-cvWulnEGU6gBmgr8leVbJ6k7aI3MTjA" target="_blank">Demo</a>.</li>
 <li>[<b>Apr/2020</b>] I will be a volunteer for <a href="https://iclr.cc/" target="_blank">ICLR 2020</a></li>
 <li>[<b>Feb/2019</b>] I will be spending summer 2019 at Media Analytics Department of <a href="http://www.nec-labs.com/research-departments/media-analytics/media-analytics-home" target="_blank">NEC Laboratories America, Inc.</a></li>
 </ul>
@@ -141,6 +139,23 @@ Recently, I focus on the following research topics:
 <h2>Publications</h2>
 
 <table class="imgtable">
+	
+<!-- prgbd-->
+<tr>
+<td><img class="proj_thumb" src="./papers_imgs/prgbd_teaser.gif" alt="" height="100px",/>&nbsp;</td>
+<td>
+<p class="pub_title">Pseudo RGB-D for Self-Improving Monocular SLAM and Depth Prediction</p>
+<p class="pub_author"><b>Lokender Tiwari</b>, Pan Ji, Quoc-Huy Tran, Bingbing Zhuang, Saket Anand, Manmohan Chandraker<br>
+Eupropean Conference on Computer Vision (ECCV), 2020.<br>
+[<a href= "https://arxiv.org/pdf/2004.10681.pdf" target="_blank">Preprint</a>] 
+[<a href="" target="_blank">Code coming soon</a>] 
+[<a href="bibtex.html#tiwari2020pseudo" target="_blank">BibTex</a>]
+[<a href="http://tiny.cc/pRGBDKITTI19" target="_blank">Demo 1 </a>]
+[<a href="http://tiny.cc/pRGBDKITTI11" target="_blank">Demo 2 </a>]
+[<a href="http://tiny.cc/pRGBDTUMLCV" target="_blank">Demo 3</a>]
+</p> </td>
+</tr>
+	
 <!-- REGroup-->
 <tr>
 <td><img class="proj_thumb" src="./papers_imgs/REGroup.png" alt="" height="100px",/>&nbsp;</td>
@@ -169,21 +184,7 @@ arXiv, 2020.<br>
 
 
 
-<!-- prgbd-->
-<tr>
-<td><img class="proj_thumb" src="./papers_imgs/prgbd_teaser.gif" alt="" height="100px",/>&nbsp;</td>
-<td>
-<p class="pub_title">Pseudo RGB-D for Self-Improving Monocular SLAM and Depth Prediction</p>
-<p class="pub_author"><b>Lokender Tiwari</b>, Pan Ji, Quoc-Huy Tran, Bingbing Zhuang, Saket Anand, Manmohan Chandraker<br>
-arXiv, 2020.<br>
-[<a href= "https://arxiv.org/pdf/2004.10681.pdf" target="_blank">Preprint</a>] 
-[<a href="" target="_blank">Code coming soon</a>] 
-[<a href="bibtex.html#tiwari2020pseudo" target="_blank">BibTex</a>]
-[<a href="http://tiny.cc/pRGBDKITTI19" target="_blank">Demo 1 </a>]
-[<a href="http://tiny.cc/pRGBDKITTI11" target="_blank">Demo 2 </a>]
-[<a href="http://tiny.cc/pRGBDTUMLCV" target="_blank">Demo 3</a>]
-</p> </td>
-</tr>
+
 
 <tr>
 <td><img class="proj_thumb" src="./papers_imgs/dgsac_wacv.jpg" alt="" height="100px",/>&nbsp;</td>
