--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ arXiv, 2020.<br>
 <table>
 <!-- Services -->
 <a id="services" class="anchor"></a>
-<h2>Services</h2>
+<h2>Professional Services</h2>
 <p>Volunteer:  </p>
 <font size="3"> 
 <ul>
