--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Recently, I focus on the following research topics:
 <td>
 <p class="pub_title">Pseudo RGB-D for Self-Improving Monocular SLAM and Depth Prediction</p>
 <p class="pub_author"><b>Lokender Tiwari</b>, Pan Ji, Quoc-Huy Tran, Bingbing Zhuang, Saket Anand, Manmohan Chandraker<br>
-European Conference on Computer Vision (ECCV), 2020.<br>
+European Conference on Computer Vision (ECCV), 2020 (Accepted).<br>
 [<a href= "https://arxiv.org/pdf/2004.10681.pdf" target="_blank">Preprint</a>] 
 [<a href="" target="_blank">Code coming soon</a>] 
 [<a href="bibtex.html#tiwari2020pseudo" target="_blank">BibTex</a>]
