--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Recently, I focus on the following research topics:
 <h2>News</h2>
 <ul>
 <li>[<b>July/2020</b>] Our work on self-improving SLAM and Depth Predictions accepted to <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a>. Check <a href= "https://arxiv.org/pdf/2004.10681.pdf" target="_blank">Preprint</a> and <a href="https://www.youtube.com/playlist?list=PL-cvWulnEGU6gBmgr8leVbJ6k7aI3MTjA" target="_blank">Demo</a> .</li>
-<li>[<b>June/2020</b>] *REGroup*. A test time replacement of Softmax to convert a pre-trained classifier into a robust classifier is released. <a href="https://arxiv.org/pdf/2006.10679.pdf" target="_blank">arXiv</a>, <a href="https://github.com/lokender/REGroup" target="_blank">Code</a>.</li>
+<li>[<b>June/2020</b>] <i>REGroup</i>. A test time replacement of Softmax to convert a pre-trained classifier into a robust classifier is released. <a href="https://arxiv.org/pdf/2006.10679.pdf" target="_blank">arXiv</a>, <a href="https://github.com/lokender/REGroup" target="_blank">Code</a>.</li>
 <li>[<b>June/2020</b>] I will be a volunteer for <a href="https://icml.cc/" target="_blank">ICML 2020</a></li>
 <li>[<b>May/2020</b>] Journal version of DGSAC, with automated multi-structure hypothesis sampling algorithm is released. <a href="https://arxiv.org/pdf/2006.02413.pdf" target="_blank">arXiv</a>.</li>
 <li>[<b>Apr/2020</b>] I will be a volunteer for <a href="https://iclr.cc/" target="_blank">ICLR 2020</a></li>
