--- a/self-improving-SLAM.html
+++ b/self-improving-SLAM.html
@@ -33,27 +33,21 @@
 <h4 style="text-align:center"><div>In European Conference on Computer Vision (ECCV), 2020</div> </h4>
 
 
-<!--   Icon Section   -->
-<!-- <div class="row center">
-<div class="col l8 offset-l2 m3 offset-m1 s12">
-  <video id="vid" width="640" controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="https://filebox.ece.vt.edu/~ylzou/eccv2018dfnet/teaser.mp4">
-  <video class="responsive-video" autoplay="" loop="" controls="">
-    <source src="https://filebox.ece.vt.edu/~ylzou/eccv2018dfnet/short_teaser.mp4" type="video/mp4">
-  </video>
-</div>
-
-</div> -->
 
 <h2 style="text-align:center">DEMOS</h2>
 <!--   Icon Section   -->
 <div class="row center">
 <div class="col l8 offset-l2 m3 offset-m1 s12">
-	<p align="center">
 <h4 style="text-align:center">KITTI Odometry Sequence 19.</h4>
+	<p align="center">
 <iframe display="block" width="640" height="320" src="https://www.youtube.com/embed/OOPJpHexrdE?autoplay=1"> </iframe> 
+		</p>
 <h4 style="text-align:center">KITTI Odometry Sequence 11.</h4>
-<iframe width="640" height="320" src="https://www.youtube.com/embed/PMYI9j5vHOw?autoplay=1"> </iframe> 
-<h4 style="text-align:center">TUM RGB-D Sequence freiburg3 Large Cabinet Validation.</h4></p>
+
+	<p align="center">
+		<iframe width="640" height="320" src="https://www.youtube.com/embed/PMYI9j5vHOw?autoplay=1"> </iframe> 
+	</p>
+<h4 style="text-align:center">TUM RGB-D Sequence freiburg3 Large Cabinet Validation.</h4>
 <p align="center">
 <iframe display="block" width="480" height="320" src="https://www.youtube.com/embed/MffXsKjy9W0?autoplay=1"></iframe>
 </p>
@@ -74,7 +68,7 @@ feature-based monocular SLAM system (i.e., ORB-SLAM). Extensive experiments on K
 <h2 style="text-align:center">PAPER</h2>
 <div style="text-align:center"> 
 <a href="https://arxiv.org/abs/2004.10681" target="_blank">
-<img class="responsive-img" src="./papers_imgs/prgbd_paper.png" width="100" height="200">
+<img class="responsive-img" src="./papers_imgs/prgbd_paper.png" width="100" >
 </a>
 <h4>ECCV 2020</h4>
 </div>
@@ -94,14 +88,14 @@ feature-based monocular SLAM system (i.e., ORB-SLAM). Extensive experiments on K
 <h2 style="text-align:center">DOWNLOADS</h2>
 <div style="text-align:center"> 
 <a href="" target="_blank">
-<img class="responsive-img" src="./papers_imgs/github.png" width="100" height="200">
+<img class="responsive-img" src="./papers_imgs/github.png" width="100" >
 </a>
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
 <a href="" target="_blank">
-<img class="responsive-img" src="./papers_imgs/icon_zip.png" width="100" height="200">
+<img class="responsive-img" src="./papers_imgs/icon_zip.png" width="100" >
 </a>
 <h4>Code (coming soon)  &nbsp&nbsp&nbsp&nbsp&nbsp  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  Trained Models/Results </h4>
 </div>
