--- a/self-improving-SLAM.html
+++ b/self-improving-SLAM.html
@@ -27,8 +27,8 @@
 <div class="container"> 
 
 <h1 style="text-align:center">Pseudo RGB-D for Self-Improving Monocular SLAM and Depth Prediction</h1> <br>
-<h4 style="text-align:center"><a href="https://cse.iiitd.ac.in/">Lokender Tiwari<sup>1</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://sites.google.com/site/peterji1990">Pan Ji<sup>2</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://cs.adelaide.edu.au/~huy/home.php">Quoc-Huy Tran<sup>2</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://bbzh.github.io/">Bingbing Zhuang<sup>2</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://www.iiitd.edu.in/~anands/index.html">Saket Anand<sup>1</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://cseweb.ucsd.edu/~mkchandraker/">Manmohan Chandraker<sup>2,3</sup></a>  </h4> 
-<h4 style="text-align:center"><a href="https://cse.iiitd.ac.in/"><sup>1</sup>IIIT-Delhi</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://cse.iiitd.ac.in/"><sup>2</sup>NEC Labs America </a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://cse.iiitd.ac.in/"><sup>3</sup>UCSD</a>  </h4>
+<h4 style="text-align:center"><a href="https://lokender.github.io/">Lokender Tiwari<sup>1</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://sites.google.com/site/peterji1990">Pan Ji<sup>2</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://cs.adelaide.edu.au/~huy/home.php">Quoc-Huy Tran<sup>2</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://bbzh.github.io/">Bingbing Zhuang<sup>2</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://www.iiitd.edu.in/~anands/index.html">Saket Anand<sup>1</sup></a>&nbsp&nbsp&nbsp&nbsp<a href="https://cseweb.ucsd.edu/~mkchandraker/">Manmohan Chandraker<sup>2,3</sup></a>  </h4> 
+<h4 style="text-align:center"><a href="https://www.iiitd.ac.in/"><sup>1</sup>IIIT-Delhi</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="http://www.nec-labs.com/research-departments/media-analytics/media-analytics-home"><sup>2</sup>NEC Labs America </a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="https://ucsd.edu/"><sup>3</sup>UCSD</a>  </h4>
 
 <h4 style="text-align:center"><div>In European Conference on Computer Vision (ECCV), 2020</div> </h4>
 
