eccv2020 page and regroup

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@ Recently, I focus on the following research topics:
 
 <h2>News</h2>
 <ul>
-<li>[<b>July/2020</b>] Our work on self-improving SLAM and Depth Predictions accepted to <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a>. Check <a href= "https://arxiv.org/pdf/2004.10681.pdf" target="_blank">Preprint</a> and <a href="https://www.youtube.com/playlist?list=PL-cvWulnEGU6gBmgr8leVbJ6k7aI3MTjA" target="_blank">Demo</a> .</li>
-<li>[<b>June/2020</b>] <i>REGroup</i>. A test time replacement of Softmax to convert a pre-trained classifier into a robust classifier is released. <a href="https://arxiv.org/pdf/2006.10679.pdf" target="_blank">arXiv</a>, <a href="https://github.com/lokender/REGroup" target="_blank">Code</a>.</li>
+<li>[<b>July/2020</b>] Our work on self-improving SLAM and Depth Predictions accepted to <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a>. 
+[<a href="https://lokender.github.io/self-improving-SLAM.html" target="_blank">Project Page</a>].</li>
+<li>[<b>June/2020</b>] <i>REGroup</i>. A test time replacement of Softmax for robust predictions. <a href="https://arxiv.org/pdf/2006.10679.pdf" target="_blank">arXiv</a>, [<a href="https://lokender.github.io/REGroup.html" target="_blank">Project Page</a>].</li>
 <li>[<b>June/2020</b>] I will be a volunteer for <a href="https://icml.cc/" target="_blank">ICML 2020</a></li>
 <li>[<b>May/2020</b>] Journal version of DGSAC, with automated multi-structure hypothesis sampling algorithm is released. <a href="https://arxiv.org/pdf/2006.02413.pdf" target="_blank">arXiv</a>.</li>
 <li>[<b>Apr/2020</b>] I will be a volunteer for <a href="https://iclr.cc/" target="_blank">ICLR 2020</a></li>
@@ -164,6 +165,7 @@ European Conference on Computer Vision (<b>ECCV</b>), 2020 (Accepted).<br>
 <p class="pub_author"><b>Lokender Tiwari</b>, Anish Madan, Saket Anand, Subhashish Banerjee<br>
 arXiv, 2020.<br>
 [<a href= "https://arxiv.org/pdf/2006.10679.pdf" target="_blank">Preprint</a>] 
+[<a href="https://lokender.github.io/REGroup.html" target="_blank">Project Page</a>] 
 [<a href="https://github.com/lokender/REGroup" target="_blank">Code</a>] 
 [<a href="bibtex.html#tiwari2020dissecting" target="_blank">BibTex</a>]
 </p> </td>
