--- a/REGroup.html
+++ b/REGroup.html
@@ -88,7 +88,7 @@ discovery pointing to intrinsic robustness to adversarial attacks. We find that 
 <a href="https://github.com/lokender/REGroup" target="_blank">
 <img class="responsive-img" src="./papers_imgs/github.png" width="100" >
 </a>
-<h4>Code</h4>
+<h4><a href="https://github.com/lokender/REGroup">Code</a></h4>
 </div>
 
 <h2 style="text-align:center">SAMPLE RESULTS (ImageNet Dataset)</h2>
