--- a/self-improving-SLAM.html
+++ b/self-improving-SLAM.html
@@ -38,6 +38,12 @@
 <!--   Icon Section   -->
 <div class="row center">
 <div class="col l8 offset-l2 m3 offset-m1 s12">
+	
+<h4 style="text-align:center">RGB vs Pseudo RGB-D SLAM and Monocular Depth Demos (ECCV 2020 Demo Track)
+	<p align="center">
+<iframe display="block" width="640" height="320" src="https://www.youtube.com/embed/gdY4yn0J4E0?autoplay=1"> </iframe> 
+		</p>
+	
 <h4 style="text-align:center">KITTI Odometry Sequence 19.</h4>
 	<p align="center">
 <iframe display="block" width="640" height="320" src="https://www.youtube.com/embed/OOPJpHexrdE?autoplay=1"> </iframe> 
