--- a/self-improving-SLAM.html
+++ b/self-improving-SLAM.html
@@ -39,7 +39,7 @@
 <div class="row center">
 <div class="col l8 offset-l2 m3 offset-m1 s12">
 	
-<h4 style="text-align:center">RGB vs Pseudo RGB-D SLAM and Monocular Depth Demos (ECCV 2020 Demo Track)
+<h4 style="text-align:center">RGB vs Pseudo RGB-D SLAM and Monocular Depth Prediction Demos (ECCV 2020 Demo Track)
 	<p align="center">
 <iframe display="block" width="640" height="320" src="https://www.youtube.com/embed/gdY4yn0J4E0?autoplay=1"> </iframe> 
 		</p>
