--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Recently, I focus on the following research topics:
 <p class="pub_title">Pseudo-RGB-D: Exploiting Learned Depth for Robust SfM </p>
 <p class="pub_author">Quoc-Huy Tran, <b>Lokender Tiwari</b>, Pan Ji, Manmohan Chandraker<br>
 <a href="http://www.nec-labs.com" target="_blank">NEC Laboratories America, Inc.</a><br>
-(provisional application # US/62/892,018, filed on Aug 2019) <br>
+(Application #US/16/987,705, filed on Aug 2020) <br>
 </p> </td>
 </tr>
 </table>
